[WIP] Java 9 integration (WIP #13)